# CardGame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  apples2apples  cmake_install.cmake  compile_commands.json  config.h  config.h.in  output.txt
.cache/clangd/index/: App.hpp.17FCED002C197743.idx  App.hpp.566AA6C27ABFF351.idx  App_inl.hpp.14B47C35C074899B.idx  App_inl.hpp.F7C7CA87C3A87D87.idx  CLI.hpp.3244ACC73ABF3B22.idx  CLI.hpp.76AC0F39DE429554.idx  CMakeCXXCompilerId.cpp.71F8E1440F6E34C0.idx  Config.hpp.3F23B4BDA943FB5B.idx  Config.hpp.FC2325F733004FB1.idx  ConfigFwd.hpp.00E7EF4D40C285F3.idx  ConfigFwd.hpp.E839A3C3DA1B9371.idx  Config_inl.hpp.2621BC7822388725.idx  Config_inl.hpp.CD9FEBF66BAC151C.idx  Error.hpp.5386FDF3A8F811C2.idx  Error.hpp.FB31F98615D74E45.idx  Formatter.hpp.0D2633C7B9D7552D.idx  Formatter.hpp.252898DA3AA691E5.idx  FormatterFwd.hpp.11BB0B6BE73800D0.idx  FormatterFwd.hpp.8B8785DDE3962B6F.idx  Formatter_inl.hpp.33112ECAAE5005DD.idx  Formatter_inl.hpp.65E19DC6C576A0B7.idx  Macros.hpp.00467B09A479B8DE.idx  Macros.hpp.ED2EEE88BA52A633.idx  Option.hpp.4BB14FF7C8EA180B.idx  Option.hpp.C07FA6C8B31DFA7B.idx  Option_inl.hpp.9F4C4F9297D7BA7F.idx  Option_inl.hpp.FD7B2A55BD742C81.idx  Split.hpp.010092D991B57B93.idx  Split.hpp.1F3A1730038E374A.idx  Split_inl.hpp.1DDAE2BD62E3F761.idx  Split_inl.hpp.C26446BA161632C4.idx  StringTools.hpp.4EE4E647BB5482A9.idx  StringTools.hpp.F3D04ABC827BA133.idx  StringTools_inl.hpp.AF404DEA3792F7AB.idx  StringTools_inl.hpp.C0C0E208E688A372.idx  TypeTools.hpp.C4F5030B565B1FC4.idx  TypeTools.hpp.E1AB6C28E64AB953.idx  Validators.hpp.5206FBD8F9BA0B44.idx  Validators.hpp.653F25DAFA4A155F.idx  Validators_inl.hpp.C53E3BAA80F07716.idx  (+44 more)
data/: greenApples.txt
include/: events.hpp  game.hpp  game_cli.hpp  host.hpp  joingame_state.hpp  judge_state.hpp  play_state.hpp  player.hpp  sessiontype.hpp  states.hpp
include/network/: client.hpp  message.hpp  network_component_interface.hpp  server.hpp  session_connections.hpp
src/: events.cpp  game.cpp  game_cli.cpp  host.cpp  joingame_state.cpp  judge_state.cpp  main.cpp  play_state.cpp  player.cpp
src/network/: client.cpp  message.cpp  server.cpp  session_connections.cpp
tests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test.cpp  tests
